# dataframe

./: dataframe.cabal  dataframe.ghci
app/: Synthesis.hs
benchmark/: Main.hs
docs/: coming_from_other_implementations.md  quick_start.md  using_dataframe_in_a_standalone_script.md
examples/: CaliforniaHousing.hs  Chipotle.hs  Iris.ipynb  Iris.lhs  OneBillionRowChallenge.hs  examples.cabal  titanic.ipynb
scripts/: presubmit.sh
src/: DataFrame.hs
src/DataFrame/: DecisionTree.hs  Functions.hs  Operators.hs  Synthesis.hs
src/DataFrame/IO/: CSV.hs
src/DataFrame/Operations/: Aggregation.hs
tests/Operations/: Aggregations.hs
