cabal-version:      2.4
name:               dataframe
version:            0.4.1.0

synopsis: A fast, safe, and intuitive DataFrame library.

description: A fast, safe, and intuitive DataFrame library for exploratory data analysis.

bug-reports: https://github.com/mchav/dataframe/issues
license:            MIT
license-file:       LICENSE
author:             Michael Chavinda
maintainer:         mschavinda@gmail.com

copyright: (c) 2024-2025 Michael Chavinda
category: Data
tested-with: GHC ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.3 || ==9.12.2
extra-doc-files: CHANGELOG.md README.md
extra-source-files: cbits/process_csv.h
                    data/titanic/*.csv
                    tests/data/*.csv
                    tests/data/*.tsv
                    tests/data/*.parquet
                    tests/data/unstable_csv/*.csv
                    tests/data/unstable_csv/*.tsv
                    -- tests/data/*.md
                    -- tests/data/*.bin
                    -- tests/data/*.json
                    -- tests/data/*.txt
                    -- tests/data/*.encrypted

source-repository head
  type:     git
  location: https://github.com/mchav/dataframe

common warnings
    -- TODO add more warnings, eventually -Wall
    ghc-options:
        -Wincomplete-patterns
        -Wincomplete-uni-patterns
        -Wunused-imports
        -Wunused-packages
        -Wunused-local-binds

library
    import: warnings
    default-extensions: Strict
    exposed-modules: DataFrame,
                    DataFrame.Lazy,
                    DataFrame.Functions,
                    DataFrame.Synthesis,
                    DataFrame.Display.Web.Plot,
                    DataFrame.Internal.Types,
                    DataFrame.Internal.Expression,
                    DataFrame.Internal.Interpreter,
                    DataFrame.Internal.Parsing,
                    DataFrame.Internal.Column,
                    DataFrame.Internal.Statistics,
                    DataFrame.Display.Terminal.PrettyPrint,
                    DataFrame.Display.Terminal.Colours,
                    DataFrame.Internal.DataFrame,
                    DataFrame.Internal.Row,
                    DataFrame.Internal.Schema,
                    DataFrame.Errors,
                    DataFrame.Operations.Core,
                    DataFrame.Operations.Join,
                    DataFrame.Operations.Merge,
                    DataFrame.Operators,
                    DataFrame.Operations.Permutation,
                    DataFrame.Operations.Subset,
                    DataFrame.Operations.Statistics,
                    DataFrame.Operations.Transformations,
                    DataFrame.Operations.Typing,
                    DataFrame.Operations.Aggregation,
                    DataFrame.Display,
                    DataFrame.Display.Terminal.Plot,
                    DataFrame.IO.CSV,
                    DataFrame.IO.JSON,
                    DataFrame.IO.Unstable.CSV,
                    DataFrame.IO.Parquet,
                    DataFrame.IO.Parquet.Binary,
                    DataFrame.IO.Parquet.Dictionary,
                    DataFrame.IO.Parquet.Levels,
                    DataFrame.IO.Parquet.Thrift,
                    DataFrame.IO.Parquet.ColumnStatistics,
                    DataFrame.IO.Parquet.Compression,
                    DataFrame.IO.Parquet.Encoding,
                    DataFrame.IO.Parquet.Page,
                    DataFrame.IO.Parquet.Time,
                    DataFrame.IO.Parquet.Types,
                    DataFrame.Lazy.IO.CSV,
                    DataFrame.Lazy.Internal.DataFrame,
                    DataFrame.Monad,
                    DataFrame.DecisionTree
    build-depends:    base >= 4 && <5,
                      aeson >= 0.11.0.0 && < 3,
                      array >= 0.5.4.0 && < 0.6,
                      attoparsec >= 0.12 && < 0.15,
                      bytestring >= 0.11 && < 0.13,
                      bytestring-lexing >= 0.5 && < 0.6,
                      cassava >= 0.1 && < 1,
                      containers >= 0.6.7 && < 0.9,
                      directory >= 1.3.0.0 && < 2,
                      granite == 0.3.0.5,
                      hashable >= 1.2 && < 2,
                      process ^>= 1.6,
                      snappy-hs ^>= 0.1,
                      random >= 1.3 && < 2,
                      regex-tdfa >= 1.3.0 && < 2,
                      scientific >=0.3.1 && <0.4,
                      template-haskell >= 2.0 && < 3,
                      text >= 2.0 && < 3,
                      time >= 1.12 && < 2,
                      unordered-containers >= 0.1 && < 1,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zlib >= 0.5 && < 1,
                      zstd >= 0.1.2.0 && < 0.2,
                      mmap >= 0.5.8 && < 0.6,
                      parallel >= 3.2.2.0 && < 5,
                      filepath >= 1.4 && < 2,
                      Glob >= 0.10 && < 1,

    hs-source-dirs:   src
    c-sources:        cbits/process_csv.c
    include-dirs:     cbits
    includes:         process_csv.h
    install-includes: process_csv.h
    default-language: Haskell2010

executable dataframe-benchmark-example
    import: warnings
    main-is: Benchmark.hs
    build-depends:    base >= 4 && < 5,
                      dataframe ^>= 0.4,
                      random >= 1 && < 2,
                      time >= 1.12 && < 2,
                      vector ^>= 0.13,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -rtsopts -threaded -with-rtsopts=-N

executable synthesis
    import: warnings
    main-is: Synthesis.hs
    build-depends:    base >= 4 && < 5,
                      dataframe ^>= 0.4,
                      random >= 1 && < 2,
                      text >= 2.0 && < 3
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -rtsopts -threaded -with-rtsopts=-N

executable dataframe
    import: warnings
    main-is: Main.hs
    build-depends:    base >= 4 && < 5,
                      directory >= 1.3.0.0 && < 2,
                      filepath >= 1.4 && < 2,
                      process >= 1.6 && < 2,
                      time >= 1.12 && < 2
    if !os(windows)
        build-depends: unix >= 2 && < 3
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -rtsopts -threaded -with-rtsopts=-N

benchmark dataframe-benchmark
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: benchmark
    build-depends: base >= 4 && < 5,
                   criterion >= 1 && < 2,
                   process >= 1.6 && < 2,
                   dataframe ^>= 0.4
    default-language: Haskell2010
    ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N

test-suite tests
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules: Assertions,
                   Functions,
                   GenDataFrame,
                   Operations.Aggregations,
                   Operations.Apply,
                   Operations.Core,
                   Operations.Derive,
                   Operations.Filter,
                   Operations.GroupBy,
                   Operations.InsertColumn,
                   Operations.Join,
                   Operations.Merge,
                   Operations.ReadCsv,
                   Operations.Sort,
                   Operations.Subset,
                   Operations.Statistics,
                   Operations.Take,
                   Parquet
    build-depends:  base >= 4 && < 5,
                    dataframe ^>= 0.4,
                    directory >= 1.3.0.0 && < 2,
                    HUnit ^>= 1.6,
                    QuickCheck >= 2 && < 3,
                    random >= 1 && < 2,
                    random-shuffle >= 0.0.4 && < 1,
                    random >= 1 && < 2,
                    text >= 2.0 && < 3,
                    time >= 1.12 && < 2,
                    vector ^>= 0.13,
                    containers >= 0.6.7 && < 0.9
    hs-source-dirs: tests
    default-language: Haskell2010
