cabal-version:      2.4
name:               examples
version:            0.0.0.1

synopsis: Examples for dataframe library.

description: Examples for dataframe library.

bug-reports: https://github.com/mchav/dataframe/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Michael Chavinda
maintainer:         mschavinda@gmail.com

copyright: (c) 2024-2024 Michael Chavinda
category: Data
tested-with: GHC ==9.8.3 || ==9.6.6 || ==9.10.1
extra-doc-files: CHANGELOG.md README.md

source-repository head
  type:     git
  location: https://github.com/mchav/dataframe

executable chipotle
    main-is:       Chipotle.hs
    default-extensions: Strict
    exposed-modules: DataFrame,
                    DataFrame.Lazy,
                    DataFrame.Functions,
                    DataFrame.Synthesis,
                    DataFrame.Display.Web.Plot,
                    DataFrame.Internal.Types,
                    DataFrame.Internal.Expression,
                    DataFrame.Internal.Interpreter
                    DataFrame.Internal.Parsing,
                    DataFrame.Internal.Column,
                    DataFrame.Internal.Statistics,
                    DataFrame.Display.Terminal.PrettyPrint,
                    DataFrame.Display.Terminal.Colours,
                    DataFrame.Internal.DataFrame,
                    DataFrame.Internal.Row,
                    DataFrame.Internal.Schema,
                    DataFrame.Errors,
                    DataFrame.Operations.Core,
                    DataFrame.Operations.Join,
                    DataFrame.Operations.Merge,
                    DataFrame.Operations.Permutation,
                    DataFrame.Operations.Subset,
                    DataFrame.Operations.Statistics,
                    DataFrame.Operations.Transformations,
                    DataFrame.Operations.Typing,
                    DataFrame.Operations.Aggregation,
                    DataFrame.Display,
                    DataFrame.Display.Terminal.Plot,
                    DataFrame.IO.CSV,
                    DataFrame.IO.JSON,
                    DataFrame.IO.Unstable.CSV,
                    DataFrame.IO.Parquet,
                    DataFrame.IO.Parquet.Binary
                    DataFrame.IO.Parquet.Dictionary
                    DataFrame.IO.Parquet.Levels
                    DataFrame.IO.Parquet.Thrift
                    DataFrame.IO.Parquet.ColumnStatistics,
                    DataFrame.IO.Parquet.Compression,
                    DataFrame.IO.Parquet.Encoding,
                    DataFrame.IO.Parquet.Page,
                    DataFrame.IO.Parquet.Time,
                    DataFrame.IO.Parquet.Types,
                    DataFrame.Lazy.IO.CSV,
                    DataFrame.Lazy.Internal.DataFrame,
                    DataFrame.Monad,
                    DataFrame.Operators
    hs-source-dirs:   .,
                      ../src
    build-depends:    base >= 4 && <5,
                      aeson >= 0.11.0.0 && < 3,
                      array >= 0.5.4.0 && < 0.6,
                      attoparsec >= 0.12 && < 0.15,
                      bytestring >= 0.11 && < 0.13,
                      bytestring-lexing >= 0.5 && < 0.6,
                      cassava >= 0.1 && < 1,
                      containers >= 0.6.7 && < 0.9,
                      directory >= 1.3.0.0 && < 2,
                      granite == 0.3.0.5,
                      hashable >= 1.2 && < 2,
                      process ^>= 1.6,
                      snappy-hs ^>= 0.1,
                      random >= 1.3 && < 2,
                      regex-tdfa >= 1.3.0 && < 2,
                      scientific >=0.3.1 && <0.4,
                      template-haskell >= 2.0 && < 3,
                      text >= 2.0 && < 3,
                      time >= 1.12 && < 2,
                      unordered-containers >= 0.1 && < 1,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zlib >= 0.5 && < 1,
                      zstd >= 0.1.2.0 && < 0.2,
                      mmap >= 0.5.8 && <= 0.5.9,
                      parallel >= 3.2.2.0 && < 5,
                      filepath >= 1.4 && < 2,
                      Glob >= 0.10 && < 1,
    c-sources:        ../cbits/process_csv.c
    include-dirs:     ../cbits
    includes:         process_csv.h
    install-includes: process_csv.h
    default-language: Haskell2010

executable california_housing
    main-is:       CaliforniaHousing.hs
    default-extensions: Strict
    exposed-modules: DataFrame,
                    DataFrame.Lazy,
                    DataFrame.Functions,
                    DataFrame.Synthesis,
                    DataFrame.Display.Web.Plot,
                    DataFrame.Internal.Types,
                    DataFrame.Internal.Expression,
                    DataFrame.Internal.Interpreter
                    DataFrame.Internal.Parsing,
                    DataFrame.Internal.Column,
                    DataFrame.Internal.Statistics,
                    DataFrame.Display.Terminal.PrettyPrint,
                    DataFrame.Display.Terminal.Colours,
                    DataFrame.Internal.DataFrame,
                    DataFrame.Internal.Row,
                    DataFrame.Internal.Schema,
                    DataFrame.Errors,
                    DataFrame.Operations.Core,
                    DataFrame.Operations.Join,
                    DataFrame.Operations.Merge,
                    DataFrame.Operations.Permutation,
                    DataFrame.Operations.Subset,
                    DataFrame.Operations.Statistics,
                    DataFrame.Operations.Transformations,
                    DataFrame.Operations.Typing,
                    DataFrame.Operations.Aggregation,
                    DataFrame.Display,
                    DataFrame.Display.Terminal.Plot,
                    DataFrame.IO.CSV,
                    DataFrame.IO.JSON,
                    DataFrame.IO.Unstable.CSV,
                    DataFrame.IO.Parquet,
                    DataFrame.IO.Parquet.Binary
                    DataFrame.IO.Parquet.Dictionary
                    DataFrame.IO.Parquet.Levels
                    DataFrame.IO.Parquet.Thrift
                    DataFrame.IO.Parquet.ColumnStatistics,
                    DataFrame.IO.Parquet.Compression,
                    DataFrame.IO.Parquet.Encoding,
                    DataFrame.IO.Parquet.Page,
                    DataFrame.IO.Parquet.Time,
                    DataFrame.IO.Parquet.Types,
                    DataFrame.Lazy.IO.CSV,
                    DataFrame.Lazy.Internal.DataFrame,
                    DataFrame.Monad,
                    DataFrame.Operators
    hs-source-dirs:   .,
                      ../src,
                      ../dataframe-hasktorch/src
    build-depends:    base >= 4 && <5,
                      aeson >= 0.11.0.0 && < 3,
                      array >= 0.5.4.0 && < 0.6,
                      attoparsec >= 0.12 && < 0.15,
                      bytestring >= 0.11 && < 0.13,
                      bytestring-lexing >= 0.5 && < 0.6,
                      cassava >= 0.1 && < 1,
                      containers >= 0.6.7 && < 0.9,
                      directory >= 1.3.0.0 && < 2,
                      granite == 0.3.0.5,
                      hashable >= 1.2 && < 2,
                      hasktorch >= 0.2.1.6 && < 0.3,
                      process ^>= 1.6,
                      snappy-hs ^>= 0.1,
                      random >= 1.3 && < 2,
                      regex-tdfa >= 1.3.0 && < 2,
                      scientific >=0.3.1 && <0.4,
                      template-haskell >= 2.0 && < 3,
                      text >= 2.0 && < 3,
                      time >= 1.12 && < 2,
                      unordered-containers >= 0.1 && < 1,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zlib >= 0.5 && < 1,
                      zstd >= 0.1.2.0 && < 0.2,
                      mmap >= 0.5.8 && <= 0.5.9,
                      parallel >= 3.2.2.0 && < 5,
                      filepath >= 1.4 && < 2,
                      Glob >= 0.10 && < 1,
    c-sources:        ../cbits/process_csv.c
    include-dirs:     ../cbits
    includes:         process_csv.h
    install-includes: process_csv.h
    default-language: Haskell2010

executable one_billion_row_challenge
    main-is:       OneBillionRowChallenge.hs
    default-extensions: Strict
    exposed-modules: DataFrame,
                    DataFrame.Lazy,
                    DataFrame.Functions,
                    DataFrame.Synthesis,
                    DataFrame.Display.Web.Plot,
                    DataFrame.Internal.Types,
                    DataFrame.Internal.Expression,
                    DataFrame.Internal.Interpreter
                    DataFrame.Internal.Parsing,
                    DataFrame.Internal.Column,
                    DataFrame.Internal.Statistics,
                    DataFrame.Display.Terminal.PrettyPrint,
                    DataFrame.Display.Terminal.Colours,
                    DataFrame.Internal.DataFrame,
                    DataFrame.Internal.Row,
                    DataFrame.Internal.Schema,
                    DataFrame.Errors,
                    DataFrame.Operations.Core,
                    DataFrame.Operations.Join,
                    DataFrame.Operations.Merge,
                    DataFrame.Operations.Permutation,
                    DataFrame.Operations.Subset,
                    DataFrame.Operations.Statistics,
                    DataFrame.Operations.Transformations,
                    DataFrame.Operations.Typing,
                    DataFrame.Operations.Aggregation,
                    DataFrame.Display,
                    DataFrame.Display.Terminal.Plot,
                    DataFrame.IO.CSV,
                    DataFrame.IO.JSON,
                    DataFrame.IO.Unstable.CSV,
                    DataFrame.IO.Parquet,
                    DataFrame.IO.Parquet.Binary
                    DataFrame.IO.Parquet.Dictionary
                    DataFrame.IO.Parquet.Levels
                    DataFrame.IO.Parquet.Thrift
                    DataFrame.IO.Parquet.ColumnStatistics,
                    DataFrame.IO.Parquet.Compression,
                    DataFrame.IO.Parquet.Encoding,
                    DataFrame.IO.Parquet.Page,
                    DataFrame.IO.Parquet.Time,
                    DataFrame.IO.Parquet.Types,
                    DataFrame.Lazy.IO.CSV,
                    DataFrame.Lazy.Internal.DataFrame,
                    DataFrame.Monad,
                    DataFrame.Operators
    hs-source-dirs:   .,
                      ../src,
                      ../dataframe-hasktorch/src
    build-depends:    base >= 4 && <5,
                      aeson >= 0.11.0.0 && < 3,
                      array >= 0.5.4.0 && < 0.6,
                      attoparsec >= 0.12 && < 0.15,
                      bytestring >= 0.11 && < 0.13,
                      bytestring-lexing >= 0.5 && < 0.6,
                      cassava >= 0.1 && < 1,
                      containers >= 0.6.7 && < 0.9,
                      directory >= 1.3.0.0 && < 2,
                      granite == 0.3.0.5,
                      hashable >= 1.2 && < 2,
                      hasktorch >= 0.2.1.6 && < 0.3,
                      process ^>= 1.6,
                      snappy-hs ^>= 0.1,
                      random >= 1.3 && < 2,
                      regex-tdfa >= 1.3.0 && < 2,
                      scientific >=0.3.1 && <0.4,
                      template-haskell >= 2.0 && < 3,
                      text >= 2.0 && < 3,
                      time >= 1.12 && < 2,
                      unordered-containers >= 0.1 && < 1,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zlib >= 0.5 && < 1,
                      zstd >= 0.1.2.0 && < 0.2,
                      mmap >= 0.5.8 && <= 0.5.9,
                      parallel >= 3.2.2.0 && < 5,
                      filepath >= 1.4 && < 2,
                      Glob >= 0.10 && < 1,
    c-sources:        ../cbits/process_csv.c
    include-dirs:     ../cbits
    includes:         process_csv.h
    install-includes: process_csv.h
    default-language: Haskell2010

executable iris
    main-is:       Iris.lhs
    default-extensions: Strict
    exposed-modules: DataFrame,
                    DataFrame.Lazy,
                    DataFrame.Functions,
                    DataFrame.Synthesis,
                    DataFrame.Display.Web.Plot,
                    DataFrame.Internal.Types,
                    DataFrame.Internal.Expression,
                    DataFrame.Internal.Interpreter
                    DataFrame.Internal.Parsing,
                    DataFrame.Internal.Column,
                    DataFrame.Internal.Statistics,
                    DataFrame.Display.Terminal.PrettyPrint,
                    DataFrame.Display.Terminal.Colours,
                    DataFrame.Internal.DataFrame,
                    DataFrame.Internal.Row,
                    DataFrame.Internal.Schema,
                    DataFrame.Errors,
                    DataFrame.Operations.Core,
                    DataFrame.Operations.Join,
                    DataFrame.Operations.Merge,
                    DataFrame.Operations.Permutation,
                    DataFrame.Operations.Subset,
                    DataFrame.Operations.Statistics,
                    DataFrame.Operations.Transformations,
                    DataFrame.Operations.Typing,
                    DataFrame.Operations.Aggregation,
                    DataFrame.Display,
                    DataFrame.Display.Terminal.Plot,
                    DataFrame.IO.CSV,
                    DataFrame.IO.JSON,
                    DataFrame.IO.Unstable.CSV,
                    DataFrame.IO.Parquet,
                    DataFrame.IO.Parquet.Binary
                    DataFrame.IO.Parquet.Dictionary
                    DataFrame.IO.Parquet.Levels
                    DataFrame.IO.Parquet.Thrift
                    DataFrame.IO.Parquet.ColumnStatistics,
                    DataFrame.IO.Parquet.Compression,
                    DataFrame.IO.Parquet.Encoding,
                    DataFrame.IO.Parquet.Page,
                    DataFrame.IO.Parquet.Time,
                    DataFrame.IO.Parquet.Types,
                    DataFrame.Lazy.IO.CSV,
                    DataFrame.Lazy.Internal.DataFrame,
                    DataFrame.Monad,
                    DataFrame.Operators
    hs-source-dirs:   .,
                      ../src,
                      ../dataframe-hasktorch/src
    build-depends:    base >= 4 && <5,
                      aeson >= 0.11.0.0 && < 3,
                      array >= 0.5.4.0 && < 0.6,
                      attoparsec >= 0.12 && < 0.15,
                      bytestring >= 0.11 && < 0.13,
                      bytestring-lexing >= 0.5 && < 0.6,
                      cassava >= 0.1 && < 1,
                      containers >= 0.6.7 && < 0.9,
                      directory >= 1.3.0.0 && < 2,
                      granite == 0.3.0.5,
                      hashable >= 1.2 && < 2,
                      hasktorch >= 0.2.1.6 && < 0.3,
                      process ^>= 1.6,
                      snappy-hs ^>= 0.1,
                      random >= 1.3 && < 2,
                      regex-tdfa >= 1.3.0 && < 2,
                      scientific >=0.3.1 && <0.4,
                      template-haskell >= 2.0 && < 3,
                      text >= 2.0 && < 3,
                      time >= 1.12 && < 2,
                      unordered-containers >= 0.1 && < 1,
                      vector ^>= 0.13,
                      vector-algorithms ^>= 0.9,
                      zlib >= 0.5 && < 1,
                      zstd >= 0.1.2.0 && < 0.2,
                      mmap >= 0.5.8 && <= 0.5.9,
                      parallel >= 3.2.2.0 && < 5,
                      filepath >= 1.4 && < 2,
                      Glob >= 0.10 && < 1,
    c-sources:        ../cbits/process_csv.c
    include-dirs:     ../cbits
    includes:         process_csv.h
    install-includes: process_csv.h
    default-language: Haskell2010
